src/components/tabs/browse/browseTabStyle.scss
@use '../../common/styleVariables';

.filter_panel_container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  padding: 5px 30px;
  gap: 20px;
}

#demo-simple-select {
  padding-left: 13px;
}

.add_exam_list_container {
  overflow: auto;
}

.browse_tab_divider {
  height: calc(100vh - 16vh - 8vh - 30px);
  display: grid;
  grid-template-columns: 5fr 2fr;
}

@media screen and (max-width: map-get(styleVariables.$breakpoints, "large")) {
  .browse_tab_your_history_panel {
    display: none;
  }
  .browse_tab_divider {
    grid-template-columns: 1fr;
    margin-right: 10px;
    margin-left: 10px;
  }
}

@media screen and (max-width: map-get(styleVariables.$breakpoints, "phone")) {
  .add_exam_list_container {
    overflow: unset;
    margin:auto;
    text-align: center;
  }
}

